feat: undo command
